cmake_minimum_required(VERSION 3.0.0)
project(InsideOfCppModel VERSION 0.1.0)

#set(CMAKE_C_FLAGS "-Wall -Werror -Wstrict-prototypes -Wmissing-prototypes")

# include(CTest)

# enable_testing()

# add_executable(test_cmake_tools main.cpp)

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})

# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

add_subdirectory(ch1)